--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "js-die-roller",
   "version": "1.0.0",
   "description": "Rolling complex die notation with variables and functions",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "demo": "node ./demo.js"
   },
   "author": "",
   "license": "ISC",
