--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "demo": "node ./demo.js"
+    "demo": "node ./examples/demo.js"
   },
   "author": "",
   "license": "ISC",
