--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-die-roller",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "Rolling complex die notation with variables and functions",
   "main": "src/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "test:all": "jest",
     "demo": "node ./examples/demo.js"
   },
-  "author": "",
+  "author": "DVDA Games",
   "license": "ISC",
   "dependencies": {
     "jest": "^23.6.0"
