--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "js-die-roller",
-  "version": "0.2.0",
+  "name": "@dvdagames/js-die-roller",
+  "version": "0.2.1",
   "description": "Rolling complex die notation with variables and functions",
   "main": "src/index.js",
   "scripts": {
