--- a/package.json
+++ b/package.json
@@ -1,16 +1,47 @@
 {
   "name": "@dvdagames/js-die-roller",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "Rolling complex die notation with variables and functions",
-  "main": "src/index.js",
+  "type": "module",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "module": "lib/index.js",
   "scripts": {
-    "test": "jest --onlyChanged",
-    "test:all": "jest",
-    "demo": "node ./examples/demo.js"
+    "build": "npm run build:esbuild && npm run build:typescript",
+    "build:esbuild": "./scripts/esbuild.js",
+    "build:typescript": "tsc --emitDeclarationOnly --outDir lib",
+    "clean": "rimraf lib",
+    "demo": "node ./examples/demo.mjs",
+    "prebuild": "npm run clean",
+    "test": "jest"
   },
   "author": "DVDA Games",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^23.6.0"
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,md,mdx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "esbuild": "^0.14.31",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-markdown": "^2.2.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   }
 }
