--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvdagames/js-die-roller",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Rolling complex die notation with variables and functions",
   "type": "module",
   "main": "lib/index.js",
@@ -13,6 +13,7 @@
     "clean": "rimraf lib",
     "demo": "node ./examples/demo.mjs",
     "prebuild": "npm run clean",
+    "predemo": "npm run build",
     "test": "jest"
   },
   "author": "DVDA Games",
