--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
     "moduleResolution": "node",
     "module": "esnext",
     "outDir": "lib"
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib"]
 }
